[workspace]
members = [
  "crates/*",
  "dip-template/nodes/*",
  "dip-template/pallets/*",
  "dip-template/runtimes/*",
  "integration-tests/emulated",
  "nodes/*",
  "pallets/*",
  "runtime-api/*",
  "runtimes/*",
  "support",
]
resolver = "2"

[workspace.package]
authors       = ["KILT <info@kilt.io>"]
documentation = "https://docs.kilt.io"
edition       = "2021"
homepage      = "https://kilt.io/"
license-file  = "LICENSE"
readme        = "README.md"
repository    = "https://github.com/KILTprotocol/kilt-node"
version       = "1.16.0-dev"

[workspace.dependencies]
# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }

# External (without extra features and with default disabled if necessary)
base58             = { version = "0.2.0", default-features = false }
bitflags           = { version = "1.3.2", default-features = false }
cfg-if             = { version = "1.0" }
clap               = { version = "4.1.6" }
enum-iterator      = { version = "2.0.0" }
env_logger         = { version = "0.10.0" }
fluent-uri         = { version = "0.1.4", default-features = false }
futures            = { version = "0.3.21", default-features = false }
hash-db            = { version = "0.16.0", default-features = false }
hex                = { version = "0.4.0", default-features = false }
hex-literal        = { version = "0.3.4" }
jsonrpsee          = { version = "0.24.0" }
jsonrpsee-core     = { version = "0.24.0" }
libsecp256k1       = { version = "0.7", default-features = false }
log                = { version = "0.4.17" }
parity-scale-codec = { version = "3.6.12", default-features = false }
scale-info         = { version = "2.11.1", default-features = false }
serde              = { version = "1.0.197", default-features = false }
serde_json         = { version = "1.0.121", default-features = false }
sha3               = { version = "0.10.0", default-features = false }
smallvec           = { version = "1.8.0" }
substrate-fixed    = { version = "0.5.9", default-features = false }

#tests
xcm-integration-tests = { path = "integration-tests/emulated", default-features = false }

# Internal pallets (with default disabled)
attestation            = { path = "pallets/attestation", default-features = false }
ctype                  = { path = "pallets/ctype", default-features = false }
delegation             = { path = "pallets/delegation", default-features = false }
did                    = { path = "pallets/did", default-features = false }
pallet-asset-switch    = { path = "pallets/pallet-asset-switch", default-features = false }
pallet-bonded-coins    = { path = "pallets/pallet-bonded-coins", default-features = false }
pallet-configuration   = { path = "pallets/pallet-configuration", default-features = false }
pallet-deposit-storage = { path = "pallets/pallet-deposit-storage", default-features = false }
pallet-did-lookup      = { path = "pallets/pallet-did-lookup", default-features = false }
pallet-dip-consumer    = { path = "pallets/pallet-dip-consumer", default-features = false }
pallet-dip-provider    = { path = "pallets/pallet-dip-provider", default-features = false }
pallet-inflation       = { path = "pallets/pallet-inflation", default-features = false }
pallet-migration       = { path = "pallets/pallet-migration", default-features = false }
pallet-relay-store     = { path = "pallets/pallet-relay-store", default-features = false }
pallet-web3-names      = { path = "pallets/pallet-web3-names", default-features = false }
parachain-staking      = { path = "pallets/parachain-staking", default-features = false }
public-credentials     = { path = "pallets/public-credentials", default-features = false }

# Internal support (with default disabled)
kilt-asset-dids     = { path = "crates/assets", default-features = false }
kilt-dip-primitives = { path = "crates/kilt-dip-primitives", default-features = false }
kilt-support        = { path = "support", default-features = false }
runtime-common      = { path = "runtimes/common", default-features = false }

# Templates
dip-consumer-runtime-template = { path = "dip-template/runtimes/dip-consumer", default-features = false }
dip-provider-runtime-template = { path = "dip-template/runtimes/dip-provider", default-features = false }
pallet-postit                 = { path = "dip-template/pallets/pallet-postit", default-features = false }

# Internal runtime API (with default disabled)
kilt-runtime-api-did                = { path = "runtime-api/did", default-features = false }
kilt-runtime-api-dip-provider       = { path = "runtime-api/dip-provider", default-features = false }
kilt-runtime-api-public-credentials = { path = "runtime-api/public-credentials", default-features = false }
kilt-runtime-api-staking            = { path = "runtime-api/staking", default-features = false }
pallet-asset-switch-runtime-api     = { path = "runtime-api/asset-switch", default-features = false }
pallet-bonded-coins-runtime-api     = { path = "runtime-api/bonded-coins", default-features = false }

# Internal KILT runtimes (with default disabled)
kestrel-runtime   = { path = "runtimes/kestrel", default-features = false }
peregrine-runtime = { path = "runtimes/peregrine", default-features = false }
spiritnet-runtime = { path = "runtimes/spiritnet", default-features = false }

# Benchmarking (with default disabled)
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-system-benchmarking           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }

# Cumulus (with default disabled)

cumulus-pallet-aura-ext         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-pallet-xcm              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-pallet-xcmp-queue       = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-primitives-aura         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-primitives-core         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-primitives-timestamp    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
cumulus-primitives-utility      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
parachain-info                  = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
parachains-common               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }

# XCM Emulator tests
asset-hub-kusama-runtime          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
asset-hub-polkadot-runtime        = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
asset-hub-rococo-emulated-chain   = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
asset-hub-rococo-runtime          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
asset-hub-westend-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
bridge-hub-kusama-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
bridge-hub-polkadot-runtime       = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
bridge-hub-rococo-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
collectives-polkadot-runtime      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
penpal-runtime                    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
rococo-emulated-chain             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
xcm-emulator                      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }

# Substrate (with default disabled)

frame-benchmarking                         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-benchmarking-cli                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-executive                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-metadata-hash-extension              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-support                              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-system                               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-system-rpc-runtime-api               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
frame-try-runtime                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-assets                              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-aura                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-authorship                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-balances                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-collator-selection                  = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-collective                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-democracy                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-grandpa                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-im-online                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-indices                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-membership                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-message-queue                       = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-multisig                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-preimage                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-proxy                               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-scheduler                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-session                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-sudo                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-timestamp                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-tips                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-transaction-payment                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-treasury                            = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-utility                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
pallet-vesting                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-api                                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-arithmetic                              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-authority-discovery                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-block-builder                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-consensus-aura                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-consensus-babe                          = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-core                                    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-genesis-builder                         = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-inherents                               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-io                                      = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-metadata-ir                             = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-offchain                                = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-runtime                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-session                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-staking                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-state-machine                           = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-std                                     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-tracing                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-transaction-pool                        = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-trie                                    = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-version                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
sp-weights                                 = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }

# Polkadot (with default disabled)
pallet-xcm                  = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
polkadot-parachain          = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
polkadot-runtime-common     = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
rococo-runtime              = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
xcm                         = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
xcm-builder                 = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
xcm-executor                = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }
xcm-simulator               = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2409-5" }

# Client-only (with default enabled)
cumulus-client-cli                      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-client-collator                 = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-client-consensus-common         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-client-consensus-proposer       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-client-network                  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-client-service                  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-relay-chain-minimal-node        = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
pallet-transaction-payment-rpc          = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
polkadot-cli                            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
polkadot-primitives                     = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
polkadot-service                        = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-basic-authorship                     = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-chain-spec                           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-cli                                  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-client-api                           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-consensus                            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-consensus-aura                       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-consensus-grandpa                    = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-executor                             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-keystore                             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-network                              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-network-sync                         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-offchain                             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-rpc-api                              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-service                              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-sysinfo                              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-telemetry                            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-tracing                              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-transaction-pool                     = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sc-transaction-pool-api                 = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-blockchain                           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-consensus                            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-consensus-beefy                      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-consensus-grandpa                    = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-keyring                              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-keystore                             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
sp-timestamp                            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
substrate-build-script-utils            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
substrate-frame-rpc-system              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }
substrate-prometheus-endpoint           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-5" }

# ISMP 
ismp                       = { git = "https://github.com/polytope-labs/hyperbridge", branch = "polkadot-stable2409", default-features = false }
ismp-parachain             = { git = "https://github.com/polytope-labs/hyperbridge", branch = "polkadot-stable2409", default-features = false }
ismp-parachain-runtime-api = { git = "https://github.com/polytope-labs/hyperbridge", branch = "polkadot-stable2409", default-features = false }
pallet-ismp                = { git = "https://github.com/polytope-labs/hyperbridge", branch = "polkadot-stable2409", default-features = false }
pallet-ismp-runtime-api    = { git = "https://github.com/polytope-labs/hyperbridge", branch = "polkadot-stable2409", default-features = false }
pallet-token-gateway       = { git = "https://github.com/polytope-labs/hyperbridge", branch = "polkadot-stable2409", default-features = false }

[profile]

[profile.release]
codegen-units = 1
lto           = "fat"
panic         = "unwind"

# Defaults for `release` profiles as specified in https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release-unoptimized]
codegen-units = 16
incremental   = true
inherits      = "release"
lto           = false
